...
    // GameClient.getBoard().then((json) {
    //   log("got board!");
    // }, onError: (e) {
    //   log("Error while getting board: ${e.toString()}");
    // });
    _board = GameBoard(
      key: const Key('game_board'),
      blueCards: 5,
      redCards: 6,
      failedElections: 1,
      numberOfPlayers: numberOfPlayers,
      gameState: gameState,
      voteCallback: _onVote,
...
